--- a/01_学成在线静态页面/index.html
+++ b/01_学成在线静态页面/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>修改版</title>
-    <link rel="stylesheet" href="style/index修改版.css">
+    <title>学成在线静态页面</title>
+    <link rel="stylesheet" href="style/index.css">
 </head>
 
 <body>
