--- a/02_shopping/list.html
+++ b/02_shopping/list.html
@@ -24,7 +24,7 @@
                 <ul>
                     <li>品优购欢迎您！ &nbsp; </li>
                     <li>
-                        <a href="#">请登录 &nbsp; </a><a href="regist.html" target="_blank" class="color_red">免费注册</a>
+                        <a href="#">请登录 &nbsp; </a><a href="register.html" target="_blank" class="color_red">免费注册</a>
                     </li>
                 </ul>
             </div>
