--- a/02_shopping/index.html
+++ b/02_shopping/index.html
@@ -22,10 +22,9 @@
             <!-- 用户登录提示 -->
             <div class="fl">
                 <ul>
-                    <li>品优购欢迎您！ &nbsp; </li>
-                    <li>
-                        <a href="#">请登录 &nbsp; </a><a href="register.html" target="_blank" class="color_red">免费注册</a>
-                    </li>
+                    <li>品优购欢迎您!</li>
+                    <li><a href="#">请登录</a></li>
+                    <li><a href="register.html" target="_blank" class="color_red">免费注册</a></li>
                 </ul>
             </div>
             <!-- 用户导航栏 -->
