--- a/05_alibaixiu/index.html
+++ b/05_alibaixiu/index.html
@@ -13,9 +13,11 @@
 </head>
 
 <body>
-    <div class="container">
+    <section class="container">
+
         <!-- 头部/左侧导航栏 -->
-        <header class="header col-md-2">
+        <header class="col-md-2">
+
             <!-- logo部分 -->
             <div class="logo">
                 <h1>
@@ -25,170 +27,190 @@
                     </a>
                 </h1>
             </div>
+
             <!-- nav部分 -->
             <nav class="nav">
                 <ul>
                     <li>
-                        <a href="#" class="glyphicon glyphicon-camera">生活馆</a>
+                        <a href="#">
+                            <span class="glyphicon glyphicon-camera"></span>
+                            <span>生活馆</span>
+                        </a>
                     </li>
                     <li>
-                        <a href="#" class="glyphicon glyphicon-picture">自然汇</a>
+                        <a href="#">
+                            <span class="glyphicon glyphicon-picture"></span>
+                            <span>自然汇</span>
+                        </a>
                     </li>
                     <li>
-                        <a href="#" class="glyphicon glyphicon-phone">科技湖</a>
+                        <a href="#">
+                            <span class="glyphicon glyphicon-phone"></span>
+                            <span>科技湖</span>
+                        </a>
                     </li>
                     <li>
-                        <a href="#" class="glyphicon glyphicon-gift">奇趣事</a>
+                        <a href="#">
+                            <span class="glyphicon glyphicon-gift"></span>
+                            <span>奇趣事</span>
+                        </a>
                     </li>
                     <li>
-                        <a href="#" class="glyphicon glyphicon-glass">美食节</a>
+                        <a href="#">
+                            <span class="glyphicon glyphicon-glass"></span>
+                            <span>美食节</span>
+                        </a>
                     </li>
                 </ul>
             </nav>
         </header>
+
         <!-- 中心内容 -->
         <main class="col-md-7">
+
             <!-- 图片区 -->
-            <section class="images">
-                <ul class="clearfix">
-                    <li class="col-md-6 col-sm-6">
+            <div class="images clearfix">
+                <ul>
+                    <li class="col-sm-6">
                         <a href="#">
                             <img src="./upload/logo.png" alt="">
-                            <span>阿里百秀</span>
+                            <span class="text_2">阿里百秀</span>
                         </a>
                     </li>
-                    <li class="col-md-3 col-sm-3 col-xs-6">
+                    <li class="col-sm-3 col-xs-6">
                         <a href="#">
                             <img src="./upload/1.jpg" alt="">
-                            <span>奇了 成都一小区护卫长得像马云 市民纷纷求合影</span>
+                            <span class="text_2">奇了 成都一小区护卫长得像马云 市民纷纷求合影奇了 成都一小区护卫长得像马云 市民纷纷求合影</span>
                         </a>
                     </li>
-                    <li class="col-md-3 col-sm-3 col-xs-6">
+                    <li class="col-sm-3 col-xs-6">
                         <a href="#">
                             <img src="./upload/2.jpg" alt="">
-                            <span>奇了 成都一小区护卫长得像马云 市民纷纷求合影</span>
+                            <span class="text_2">奇了 成都一小区护卫长得像马云 市民纷纷求合影</span>
                         </a>
                     </li>
-                    <li class="col-md-3 col-sm-3 col-xs-6">
+                    <li class="col-sm-3 col-xs-6">
                         <a href="#">
                             <img src="./upload/3.jpg" alt="">
-                            <span>奇了 成都一小区护卫长得像马云 市民纷纷求合影</span>
+                            <span class="text_2">奇了 成都一小区护卫长得像马云 市民纷纷求合影</span>
                         </a>
                     </li>
-                    <li class="col-md-3 col-sm-3 col-xs-6">
+                    <li class="col-sm-3 col-xs-6">
                         <a href="#">
                             <img src="./upload/4.jpg" alt="">
-                            <span>奇了 成都一小区护卫长得像马云 市民纷纷求合影</span>
+                            <span class="text_2">奇了 成都一小区护卫长得像马云 市民纷纷求合影</span>
                         </a>
                     </li>
                 </ul>
-            </section>
+            </div>
+
             <!-- 文章区 -->
-            <section class="articles">
+            <article class="articles">
                 <!-- 行内容 -->
-                <div class="row">
+                <section class="row">
                     <!-- 左侧文字 -->
-                    <div class="col-md-9 col-sm-9">
+                    <div class="col-sm-9">
                         <h3><a href="#">生活馆 关于指甲的10个健康知识 你知道几个？</a></h3>
-                        <div class="info hidden-xs">
+                        <div class="info text-muted hidden-xs">
                             <span class="user">alibaixiu</span>发布于<span class="date">2015-11-23</span>
                         </div>
                         <p class="text_2 hidden-xs">指甲是经常容易被人们忽略的身体部位， 事实上从指甲的健康状况可以看出一个人的身体健康状况， 快来看看10个暗藏在指甲里知识吧！</p>
-                        <div class="tag">
+                        <div class="read text-muted">
                             阅读(2417)评论(1)赞 (18)
-                            <span class="hidden-xs">标签：健康 / 感染 / 指甲 / 疾病 / 皮肤 / 营养 / 趣味生活</span>
+                            <span class="tags hidden-xs">标签：健康 / 感染 / 指甲 / 疾病 / 皮肤 / 营养 / 趣味生活</span>
                         </div>
                     </div>
                     <!-- 右侧图片 -->
-                    <div class="col-md-3 col-sm-3 hidden-xs">
+                    <div class="col-sm-3 hidden-xs">
                         <img src="./upload/5.jpg" alt="">
                     </div>
-                </div>
-                 <!-- 行内容 -->
-                 <div class="row">
+                </section>
+                <!-- 行内容 -->
+                <section class="row">
                     <!-- 左侧文字 -->
-                    <div class="col-md-9 col-sm-9">
+                    <div class="col-sm-9">
                         <h3><a href="#">生活馆 关于指甲的10个健康知识 你知道几个？</a></h3>
-                        <div class="info hidden-xs">
+                        <div class="info text-muted hidden-xs">
                             <span class="user">alibaixiu</span>发布于<span class="date">2015-11-23</span>
                         </div>
                         <p class="text_2 hidden-xs">指甲是经常容易被人们忽略的身体部位， 事实上从指甲的健康状况可以看出一个人的身体健康状况， 快来看看10个暗藏在指甲里知识吧！</p>
-                        <div class="tag">
+                        <div class="read text-muted">
                             阅读(2417)评论(1)赞 (18)
-                            <span class="hidden-xs">标签：健康 / 感染 / 指甲 / 疾病 / 皮肤 / 营养 / 趣味生活</span>
+                            <span class="tags hidden-xs">标签：健康 / 感染 / 指甲 / 疾病 / 皮肤 / 营养 / 趣味生活</span>
                         </div>
                     </div>
                     <!-- 右侧图片 -->
-                    <div class="col-md-3 col-sm-3 hidden-xs">
+                    <div class="col-sm-3 hidden-xs">
                         <img src="./upload/5.jpg" alt="">
                     </div>
-                </div>
-                 <!-- 行内容 -->
-                 <div class="row">
+                </section>
+                <!-- 行内容 -->
+                <section class="row">
                     <!-- 左侧文字 -->
-                    <div class="col-md-9 col-sm-9">
+                    <div class="col-sm-9">
                         <h3><a href="#">生活馆 关于指甲的10个健康知识 你知道几个？</a></h3>
-                        <div class="info hidden-xs">
+                        <div class="info text-muted hidden-xs">
                             <span class="user">alibaixiu</span>发布于<span class="date">2015-11-23</span>
                         </div>
                         <p class="text_2 hidden-xs">指甲是经常容易被人们忽略的身体部位， 事实上从指甲的健康状况可以看出一个人的身体健康状况， 快来看看10个暗藏在指甲里知识吧！</p>
-                        <div class="tag">
+                        <div class="read text-muted">
                             阅读(2417)评论(1)赞 (18)
-                            <span class="hidden-xs">标签：健康 / 感染 / 指甲 / 疾病 / 皮肤 / 营养 / 趣味生活</span>
+                            <span class="tags hidden-xs">标签：健康 / 感染 / 指甲 / 疾病 / 皮肤 / 营养 / 趣味生活</span>
                         </div>
                     </div>
                     <!-- 右侧图片 -->
-                    <div class="col-md-3 col-sm-3 hidden-xs">
+                    <div class="col-sm-3 hidden-xs">
                         <img src="./upload/5.jpg" alt="">
                     </div>
-                </div>
-                 <!-- 行内容 -->
-                 <div class="row">
+                </section>
+                <!-- 行内容 -->
+                <section class="row">
                     <!-- 左侧文字 -->
-                    <div class="col-md-9 col-sm-9">
+                    <div class="col-sm-9">
                         <h3><a href="#">生活馆 关于指甲的10个健康知识 你知道几个？</a></h3>
-                        <div class="info hidden-xs">
+                        <div class="info text-muted hidden-xs">
                             <span class="user">alibaixiu</span>发布于<span class="date">2015-11-23</span>
                         </div>
                         <p class="text_2 hidden-xs">指甲是经常容易被人们忽略的身体部位， 事实上从指甲的健康状况可以看出一个人的身体健康状况， 快来看看10个暗藏在指甲里知识吧！</p>
-                        <div class="tag">
+                        <div class="read text-muted">
                             阅读(2417)评论(1)赞 (18)
-                            <span class="hidden-xs">标签：健康 / 感染 / 指甲 / 疾病 / 皮肤 / 营养 / 趣味生活</span>
+                            <span class="tags hidden-xs">标签：健康 / 感染 / 指甲 / 疾病 / 皮肤 / 营养 / 趣味生活</span>
                         </div>
                     </div>
                     <!-- 右侧图片 -->
-                    <div class="col-md-3 col-sm-3 hidden-xs">
+                    <div class="col-sm-3 hidden-xs">
                         <img src="./upload/5.jpg" alt="">
                     </div>
-                </div>
-                 <!-- 行内容 -->
-                 <div class="row">
+                </section>
+                <!-- 行内容 -->
+                <section class="row">
                     <!-- 左侧文字 -->
-                    <div class="col-md-9 col-sm-9">
+                    <div class="col-sm-9">
                         <h3><a href="#">生活馆 关于指甲的10个健康知识 你知道几个？</a></h3>
-                        <div class="info hidden-xs">
+                        <div class="info text-muted hidden-xs">
                             <span class="user">alibaixiu</span>发布于<span class="date">2015-11-23</span>
                         </div>
                         <p class="text_2 hidden-xs">指甲是经常容易被人们忽略的身体部位， 事实上从指甲的健康状况可以看出一个人的身体健康状况， 快来看看10个暗藏在指甲里知识吧！</p>
-                        <div class="tag">
+                        <div class="read text-muted">
                             阅读(2417)评论(1)赞 (18)
-                            <span class="hidden-xs">标签：健康 / 感染 / 指甲 / 疾病 / 皮肤 / 营养 / 趣味生活</span>
+                            <span class="tags hidden-xs">标签：健康 / 感染 / 指甲 / 疾病 / 皮肤 / 营养 / 趣味生活</span>
                         </div>
                     </div>
                     <!-- 右侧图片 -->
-                    <div class="col-md-3 col-sm-3 hidden-xs">
+                    <div class="col-sm-3 hidden-xs">
                         <img src="./upload/5.jpg" alt="">
                     </div>
-                </div>
-            </section>
+                </section>
+            </article>
         </main>
+
         <!-- 底部/右侧信息栏 -->
         <footer class="col-md-3">
             <a href="#" class="banner">
                 <img src="./upload/zgboke.jpg" alt="">
             </a>
             <a href="#" class="hot">
-                <h3 class="btn btn-primary">热搜</h3>
+                <span class="btn btn-primary">热搜</span>
                 <h4 class="text-primary">欢迎加入中国博客联盟</h4>
                 <p class="text_2">这里收录国内各个领域的优秀博客，是一个全人工编辑的开放式博客联盟交流和展示平台这里收录国内各个领域的优秀博客，是一个全人工编辑的开放式博客联盟交流和展示平台</p>
             </a>
