--- a/06_HR/workHours.html
+++ b/06_HR/workHours.html
@@ -27,6 +27,7 @@
                     <li>总加钟：<span class="addClock"> 10:11</span></li>
                     <li>总消钟：<span class="cutClock">10:11</span></li>
                     <li>净加钟/消钟：<span class="totalClock">10:11</span></li>
+                    <li><a href="#" class="moreBtn littleFont">展开</a></li>
                 </ul>
                 <ul class="clockList littleFont">
                     <li><span class="clockDate">09月01日</span>加钟消钟：<span class="clock">1:01</span></li>
