--- a/06_HR/workHours.html
+++ b/06_HR/workHours.html
@@ -17,48 +17,32 @@
     <header>
         <label for="attendSheet" class="littleFont">上传考勤表：</label><input type="file" name="attendSheet"
             id="attendSheet">
-        <h1>2022年09月餐饮部加钟消钟统计（<span class="fullDate">2022-09-01至2022-09-30</span>）</h1>
     </header>
     <main>
+        <h1>2022年09月餐饮部加钟消钟统计（<span class="fullDate">2022-09-01至2022-09-30</span>）</h1>
         <ul class="staffList">
-            <li class="staffItem">
+            <li class="staffItem sf">
                 <ul class="clockHeader">
-                    <li>姓名：<span class="name">张三</span></li>
-                    <li>总加钟：<span class="addClock"> 10:11</span></li>
-                    <li>总消钟：<span class="cutClock">10:11</span></li>
-                    <li>净加钟/消钟：<span class="totalClock">10:11</span></li>
-                    <li><a href="#" class="moreBtn littleFont">展开</a></li>
+                    <li class="name">姓名：张三</li>
+                    <li class="addClock">总加钟: 10:11</li>
+                    <li class="cutClock">总消钟：10:11</li>
+                    <li class="totalClock">净加钟/消钟：10:11</li>
                 </ul>
                 <ul class="clockList littleFont">
-                    <li><span class="clockDate">09月01日</span>加钟消钟：<span class="clock">1:01</span></li>
-                    <li><span class="clockDate">09月01日</span>加钟消钟：<span class="clock">1:01</span></li>
-                    <li><span class="clockDate">09月01日</span>加钟消钟：<span class="clock">1:01</span></li>
-                </ul>
-            </li>
-            <li class="staffItem">
-                <ul class="clockHeader">
-                    <li>姓名：<span class="name">张三</span></li>
-                    <li>总加钟：<span class="addClock"> 10:11</span></li>
-                    <li>总消钟：<span class="cutClock">10:11</span></li>
-                    <li>净加钟/消钟：<span class="totalClock">10:11</span></li>
-                </ul>
-                <ul class="clockList littleFont">
-                    <li><span class="clockDate">09月01日</span>加钟消钟：<span class="clock">1:01</span></li>
-                    <li><span class="clockDate">09月01日</span>加钟消钟：<span class="clock">1:01</span></li>
-                    <li><span class="clockDate">09月01日</span>加钟消钟：<span class="clock">1:01</span></li>
-                </ul>
-            </li>
-            <li class="staffItem">
-                <ul class="clockHeader">
-                    <li>姓名：<span class="name">张三</span></li>
-                    <li>总加钟：<span class="addClock"> 10:11</span></li>
-                    <li>总消钟：<span class="cutClock">10:11</span></li>
-                    <li>净加钟/消钟：<span class="totalClock">10:11</span></li>
-                </ul>
-                <ul class="clockList littleFont">
-                    <li><span class="clockDate">09月01日</span>加钟消钟：<span class="clock">1:01</span></li>
-                    <li><span class="clockDate">09月01日</span>加钟消钟：<span class="clock">1:01</span></li>
-                    <li><span class="clockDate">09月01日</span>加钟消钟：<span class="clock">1:01</span></li>
+                    <li class="clockDate">
+                        <span class="date">09月01日</span>
+                        <span>1:30</span>
+                        <span>1:30</span>
+                        <span>1:30</span>
+                        <span>1:30</span>
+                    </li>
+                    <li class="clockDate">
+                        <span class="date">09月01日</span>
+                        <span>1:30</span>
+                        <span>1:30</span>
+                        <span>1:30</span>
+                        <span>1:30</span>
+                    </li>
                 </ul>
             </li>
         </ul>
